--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
@@ -74,7 +74,33 @@
             </div>
         </div>
     </section>
+<section class="padding ">
+        <div class="row margin-bottom">
+            <div class="column_10 offset_1 text center book">
+                <h1 class="color theme">Install me</h1>
+                <h3>Install <a target="_blank" href="http://getcomposer.org/download/">composer</a> and run the following commands:</h3>
+             </div>
+        </div>
 
+        <div class="row margin-top">
+            <table class="text align center">
+                <tbody>
+                    <tr>
+                        <td>php composer.phar create-project juanber84/schedule-symfony2:dev-master</td>
+                    </tr>
+                    <tr>
+                        <td>cd Schedule-symfony2</td>
+                    </tr>
+                    <tr>
+                        <td>php app/console doctrine:database:create</td>
+                    </tr>   
+                    <tr>
+                        <td>php app/console doctrine:schema:update --force</td>
+                    </tr>                    
+                </tbody>
+            </table>
+        </div>
+    </section>
     <section class="padding bck light">
         <div class="row margin-bottom">
             <div class="column_10 offset_1 text center">
