--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
@@ -78,7 +78,7 @@
         <div class="row margin-bottom">
             <div class="column_10 offset_1 text center book">
                 <h1 class="color theme">Install me</h1>
-                <h3>Install <a target="_blank" href="http://getcomposer.org/download/">composer</a> and run the following commands:</h3>
+                <h3>Install <strong><a target="_blank" href="http://getcomposer.org/download/">composer</a></strong> and run the following commands:</h3>
              </div>
         </div>
 
