--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -103,5 +103,24 @@
             </li>
         </ul>
     </div></div>
+<br><br><br>
+    <div class="column_10">
+        <div class="column_9">
+
+        <table class="records_list">
+            <thead>
+                <tr>
+                    <th>Total registers </th>                      
+                    <th>Total time job</th>              
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{numberregisters}}</td>
+                    <td>{{hours}} hours, {{minutes}} minutes, {{seconds}} seconds</td>
+            </tbody>
+        </table>
+    </div></div>
 
     {% endblock %}
