--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/index.html.twig
@@ -6,7 +6,10 @@
     <table class="records_list">
         <thead>
             <tr>
-                 <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Name', 'a.name') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Details', 'a.details') }} </th>
+                 <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }} </th>                
+                 <th>{{ knp_pagination_sortable(pagination, 'Name', 'a.name') }} </th>                
+                 <th>{{ knp_pagination_sortable(pagination, 'Details', 'a.details') }} </th>
+                 <th>{{ knp_pagination_sortable(pagination, 'Price', 'a.price') }} </th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -16,6 +19,7 @@
                 <td><a href="{{ path('admin_projects_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                 <td>{{ entity.details }}</td>
+                <td>{{ entity.price }}</td>
                 <td>
                 <ul>
                     <li>
