--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -112,13 +112,14 @@
                 <tr>
                     <th>Total registers </th>                      
                     <th>Total time job</th>              
-
+                    <th>Total money raised</th> 
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>{{numberregisters}}</td>
                     <td>{{hours}} hours, {{minutes}} minutes, {{seconds}} seconds</td>
+                    <td>{{raised}}</td>
             </tbody>
         </table>
     </div></div>
