--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/edit.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/edit.html.twig
@@ -6,14 +6,15 @@
     <form action="{{ path('admin_projects_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <input type="hidden" name="_method" value="PUT" />
         {{ form_widget(edit_form) }}
-        <p>
+        <ul class="record_actions">
+        <li>
             <button type="submit">Edit</button>
-        </p>
+        </li>
     </form>
 
-        <ul class="record_actions">
+
     <li>
-        <a href="{{ path('admin_projects') }}">
+        <a class="button secondary"  href="{{ path('admin_projects') }}">
             Back to the list
         </a>
     </li>
