--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/index.html.twig
@@ -41,7 +41,7 @@
 
         <ul>
         <li>
-            <a href="{{ path('admin_projects_new') }}">
+            <a class="button secondary"  href="{{ path('admin_projects_new') }}">
                 Create a new entry
             </a>
         </li>
