--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/show.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/show.html.twig
@@ -28,12 +28,12 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('admin_projects') }}">
+        <a class="button secondary"  href="{{ path('admin_projects') }}">
             Back to the list
         </a>
     </li>
     <li>
-        <a href="{{ path('admin_projects_edit', { 'id': entity.id }) }}">
+        <a class="button secondary"  href="{{ path('admin_projects_edit', { 'id': entity.id }) }}">
             Edit
         </a>
     </li>
