--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/new.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Project/new.html.twig
@@ -5,14 +5,15 @@
 
     <form action="{{ path('admin_projects_create') }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
-        <p>
+         <ul class="record_actions">
+        <li>
             <button type="submit">Create</button>
-        </p>
+        </li>
     </form>
 
-        <ul class="record_actions">
+       
     <li>
-        <a href="{{ path('admin_projects') }}">
+        <a class="button secondary"  href="{{ path('admin_projects') }}">
             Back to the list
         </a>
     </li>
