--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
@@ -42,7 +42,7 @@
             </div>
             <nav class="column_6 text right">
                 <a href="{{ path('fos_user_security_login') }}" class="button secondary"><span class="icon user"></span>Login</a>
-                <a href="/app_dev.php/register" class="button"><span class="icon pencil"></span>Signup</a>
+                <a href="{{ path('fos_user_register') }}" class="button"><span class="icon pencil"></span>Signup</a>
             </nav>
         </div>
     </header>
